changes except of lapForm

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -436,6 +436,12 @@ i{
     background-color: #27ae60;
 }
 
+.delete-button{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 .button-add:hover,
 .form-button-submit:hover
 {
